--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 APP_ENV='dev'
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/textmagic"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/textmagic"
